Add llvm-opensgx.c which is used by the LLVM pass
This file contains the main functions/globals used by the LLVM pass when
a secure function is called. It is responsible for setting up the
enclave properly.

--- a/user/Makefile
+++ b/user/Makefile
@@ -39,7 +39,7 @@ ALL  := sgx-tool sgx-runtime $(BINS) $(POLARSSL_LIB) sgx-host $(LLVM_OPENSGX_LIB
 
 all: $(ALL)
 
-$(LLVM_OPENSGX_LIB) : $(SGX_HOST_OBJS) $(POLARSSL_OBJS)
+$(LLVM_OPENSGX_LIB) : llvm-opensgx.o $(SGX_HOST_OBJS) $(POLARSSL_OBJS)
 	$(AR) rs $@ $^
 
 sgx-runtime: sgx-runtime.o $(SGX_HOST_OBJS) $(POLARSSL_LIB)
